# lvgl-rtthread

./: .config  .config.old  .cproject  .gitignore  .project  CMakeLists.txt  README.md  burn.sh  project.uvoptx  project.uvprojx  rtconfig.h  rtconfig.py  template.uvprojx
applications/: main.c
board/CubeMX_Config/Core/Inc/: stm32h7xx_hal_conf.h
board/CubeMX_Config/Core/Src/: stm32h7xx_hal_msp.c
libraries/: Kconfig
libraries/drivers/: drv_lcd.c
libraries/lvgl/: Kconfig  SConscript  lv_conf.h  lv_demo.c  lv_port_disp.c  lv_port_indev.c
libraries/lvgl/demo/: SConscript  lv_demo.h
libraries/lvgl/demo/src/lv_demo_benchmark/: lv_demo_benchmark.h
libraries/touch/: drv_touch.c  drv_touch_ft.c
rt-thread/include/: rtthread.h
rt-thread/src/: clock.c
rt-thread/tools/kconfig-frontends/: kconfig-mconf
