CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_SYSTEM_PROCESSOR cortex-m7)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_C_COMPILER "/Users/jg/Downloads/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gcc")
SET(CMAKE_ASM_COMPILER "/Users/jg/Downloads/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gcc")
SET(CMAKE_C_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g -std=c99")
SET(CMAKE_ASM_FLAGS " -c -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -x assembler-with-cpp -Wa,-mimplicit-it=thumb  -gdwarf-2")
SET(CMAKE_C_COMPILER_WORKS TRUE)

SET(CMAKE_CXX_COMPILER "/Users/jg/Downloads/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-g++")
SET(CMAKE_CXX_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Dgcc -O0 -gdwarf-2 -g")
SET(CMAKE_CXX_COMPILER_WORKS TRUE)

SET(CMAKE_OBJCOPY "/Users/jg/Downloads/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-objcopy")
SET(CMAKE_SIZE "/Users/jg/Downloads/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-size")

SET(CMAKE_EXE_LINKER_FLAGS " -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -Wl,--gc-sections,-Map=rtthread.map,-cref,-u,Reset_Handler -T ${CMAKE_SOURCE_DIR}/board/linker_scripts/STM32H750XBHx/link.lds")

SET(CMAKE_CXX_STANDARD 14)
PROJECT(rtthread C CXX ASM)
INCLUDE_DIRECTORIES(
	.
	applications
	board
	board/CubeMX_Config/Core/Inc
	board/port
	libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Include
	libraries/STM32H7xx_HAL/CMSIS/Include
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Inc
	libraries/drivers
	libraries/drivers/include
	libraries/drivers/include/config
	libraries/lvgl
	libraries/lvgl/demo
	libraries/lvgl/demo/src
	libraries/lvgl/demo/src/lv_demo_widgets
	libraries/lvgl/demo/src/lv_demo_widgets/assets
	libraries/samples
	libraries/touch
	packages/LVGL/rt-thread
	packages/LVGL/src
	packages/LVGL/src/core
	packages/LVGL/src/draw
	packages/LVGL/src/extra
	packages/LVGL/src/extra/layouts
	packages/LVGL/src/extra/layouts/flex
	packages/LVGL/src/extra/layouts/grid
	packages/LVGL/src/extra/libs
	packages/LVGL/src/extra/libs/bmp
	packages/LVGL/src/extra/libs/ffmpeg
	packages/LVGL/src/extra/libs/freetype
	packages/LVGL/src/extra/libs/fsdrv
	packages/LVGL/src/extra/libs/gif
	packages/LVGL/src/extra/libs/png
	packages/LVGL/src/extra/libs/qrcode
	packages/LVGL/src/extra/libs/rlottie
	packages/LVGL/src/extra/libs/sjpg
	packages/LVGL/src/extra/others
	packages/LVGL/src/extra/others/snapshot
	packages/LVGL/src/extra/themes
	packages/LVGL/src/extra/themes/basic
	packages/LVGL/src/extra/themes/default
	packages/LVGL/src/extra/themes/mono
	packages/LVGL/src/extra/widgets
	packages/LVGL/src/extra/widgets/animimg
	packages/LVGL/src/extra/widgets/calendar
	packages/LVGL/src/extra/widgets/chart
	packages/LVGL/src/extra/widgets/colorwheel
	packages/LVGL/src/extra/widgets/imgbtn
	packages/LVGL/src/extra/widgets/keyboard
	packages/LVGL/src/extra/widgets/led
	packages/LVGL/src/extra/widgets/list
	packages/LVGL/src/extra/widgets/meter
	packages/LVGL/src/extra/widgets/msgbox
	packages/LVGL/src/extra/widgets/span
	packages/LVGL/src/extra/widgets/spinbox
	packages/LVGL/src/extra/widgets/spinner
	packages/LVGL/src/extra/widgets/tabview
	packages/LVGL/src/extra/widgets/tileview
	packages/LVGL/src/extra/widgets/win
	packages/LVGL/src/font
	packages/LVGL/src/gpu
	packages/LVGL/src/gpu/sdl
	packages/LVGL/src/hal
	packages/LVGL/src/misc
	packages/LVGL/src/widgets
	rt-thread/components/dfs/filesystems/devfs
	rt-thread/components/dfs/filesystems/elmfat
	rt-thread/components/dfs/filesystems/romfs
	rt-thread/components/dfs/include
	rt-thread/components/drivers/include
	rt-thread/components/drivers/spi
	rt-thread/components/drivers/touch
	rt-thread/components/finsh
	rt-thread/components/libc/compilers/common
	rt-thread/components/libc/compilers/newlib
	rt-thread/components/libc/posix/io/poll
	rt-thread/components/libc/posix/io/stdio
	rt-thread/components/libc/posix/ipc
	rt-thread/include
	rt-thread/libcpu/arm/common
	rt-thread/libcpu/arm/cortex-m7
)

ADD_DEFINITIONS(
	-DHAVE_CCONFIG_H
	-DRT_USING_NEWLIB
	-DSTM32H7
	-DSTM32H750xx
	-DUSE_HAL_DRIVER
	-D_POSIX_C_SOURCE=1
	-D__RTTHREAD__
)

SET(PROJECT_SOURCES
	applications/main.c
	rt-thread/components/libc/compilers/newlib/syscalls.c
	rt-thread/components/libc/compilers/common/stdlib.c
	rt-thread/components/libc/compilers/common/time.c
	rt-thread/libcpu/arm/common/showmem.c
	rt-thread/libcpu/arm/common/backtrace.c
	rt-thread/libcpu/arm/common/div0.c
	rt-thread/libcpu/arm/cortex-m7/cpuport.c
	rt-thread/libcpu/arm/cortex-m7/cpu_cache.c
	rt-thread/libcpu/arm/cortex-m7/context_gcc.S
	rt-thread/components/drivers/misc/pin.c
	rt-thread/components/drivers/touch/touch.c
	rt-thread/components/drivers/i2c/i2c_core.c
	rt-thread/components/drivers/i2c/i2c-bit-ops.c
	rt-thread/components/drivers/i2c/i2c_dev.c
	rt-thread/components/drivers/spi/spi_core.c
	rt-thread/components/drivers/spi/spi_dev.c
	rt-thread/components/drivers/rtc/rtc.c
	rt-thread/components/drivers/ipc/pipe.c
	rt-thread/components/drivers/ipc/ringblk_buf.c
	rt-thread/components/drivers/ipc/waitqueue.c
	rt-thread/components/drivers/ipc/workqueue.c
	rt-thread/components/drivers/ipc/ringbuffer.c
	rt-thread/components/drivers/ipc/dataqueue.c
	rt-thread/components/drivers/ipc/completion.c
	rt-thread/components/drivers/sdio/block_dev.c
	rt-thread/components/drivers/sdio/sd.c
	rt-thread/components/drivers/sdio/mmc.c
	rt-thread/components/drivers/sdio/mmcsd_core.c
	rt-thread/components/drivers/sdio/sdio.c
	rt-thread/components/drivers/serial/serial.c
	board/board.c
	board/drv_mpu.c
	board/port/filesystem.c
	board/CubeMX_Config/Core/Src/stm32h7xx_hal_msp.c
	libraries/drivers/drv_sdio.c
	libraries/drivers/drv_lcd.c
	libraries/drivers/drv_rtc.c
	libraries/drivers/drv_soft_i2c.c
	libraries/drivers/drv_wlan.c
	libraries/drivers/drv_spi.c
	libraries/drivers/drv_common.c
	libraries/drivers/drv_gpio.c
	libraries/drivers/drv_sdram.c
	libraries/drivers/drv_usart.c
	libraries/touch/drv_touch_ft.c
	libraries/touch/drv_touch.c
	rt-thread/components/dfs/src/dfs.c
	rt-thread/components/dfs/src/dfs_posix.c
	rt-thread/components/dfs/src/dfs_fs.c
	rt-thread/components/dfs/src/dfs_file.c
	rt-thread/components/dfs/filesystems/elmfat/dfs_elm.c
	rt-thread/components/dfs/filesystems/elmfat/ff.c
	rt-thread/components/dfs/filesystems/elmfat/ffunicode.c
	rt-thread/components/dfs/filesystems/devfs/devfs.c
	rt-thread/components/dfs/filesystems/romfs/dfs_romfs.c
	rt-thread/components/dfs/filesystems/romfs/romfs.c
	rt-thread/components/finsh/msh.c
	rt-thread/components/finsh/shell.c
	rt-thread/components/finsh/cmd.c
	rt-thread/components/finsh/msh_file.c
	rt-thread/src/mempool.c
	rt-thread/src/idle.c
	rt-thread/src/object.c
	rt-thread/src/kservice.c
	rt-thread/src/clock.c
	rt-thread/src/irq.c
	rt-thread/src/thread.c
	rt-thread/src/ipc.c
	rt-thread/src/device.c
	rt-thread/src/timer.c
	rt-thread/src/components.c
	rt-thread/src/scheduler.c
	rt-thread/src/memheap.c
	packages/LVGL/src/extra/widgets/imgbtn/lv_imgbtn.c
	packages/LVGL/src/font/lv_font_montserrat_18.c
	packages/LVGL/src/font/lv_font_montserrat_24.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_utils.c
	packages/LVGL/src/misc/lv_log.c
	packages/LVGL/src/draw/lv_img_buf.c
	packages/LVGL/src/gpu/lv_gpu_nxp_vglite.c
	packages/LVGL/src/extra/libs/png/lodepng.c
	packages/LVGL/src/core/lv_group.c
	packages/LVGL/src/widgets/lv_checkbox.c
	packages/LVGL/src/font/lv_font_montserrat_14.c
	packages/LVGL/src/font/lv_font_montserrat_12.c
	packages/LVGL/src/extra/others/snapshot/lv_snapshot.c
	packages/LVGL/src/extra/widgets/animimg/lv_animimg.c
	packages/LVGL/src/font/lv_font_montserrat_12_subpx.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_blend.c
	packages/LVGL/src/extra/libs/bmp/lv_bmp.c
	packages/LVGL/src/misc/lv_area.c
	packages/LVGL/src/gpu/lv_gpu_stm32_dma2d.c
	packages/LVGL/src/core/lv_indev_scroll.c
	packages/LVGL/src/widgets/lv_switch.c
	packages/LVGL/src/extra/widgets/calendar/lv_calendar_header_dropdown.c
	packages/LVGL/src/font/lv_font_unscii_8.c
	packages/LVGL/src/extra/widgets/spinner/lv_spinner.c
	packages/LVGL/src/font/lv_font_fmt_txt.c
	packages/LVGL/src/misc/lv_timer.c
	packages/LVGL/src/gpu/lv_gpu_nxp_pxp.c
	packages/LVGL/src/widgets/lv_label.c
	packages/LVGL/src/extra/libs/gif/lv_gif.c
	packages/LVGL/src/core/lv_obj_pos.c
	packages/LVGL/src/widgets/lv_canvas.c
	packages/LVGL/src/extra/widgets/calendar/lv_calendar_header_arrow.c
	packages/LVGL/src/misc/lv_utils.c
	packages/LVGL/src/font/lv_font_montserrat_40.c
	packages/LVGL/src/font/lv_font_montserrat_16.c
	packages/LVGL/src/extra/widgets/meter/lv_meter.c
	packages/LVGL/src/extra/libs/qrcode/lv_qrcode.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_stack_blur.c
	packages/LVGL/src/misc/lv_async.c
	packages/LVGL/src/widgets/lv_roller.c
	packages/LVGL/src/extra/libs/gif/gifdec.c
	packages/LVGL/src/core/lv_obj_tree.c
	packages/LVGL/src/widgets/lv_objx_templ.c
	packages/LVGL/src/extra/widgets/calendar/lv_calendar.c
	packages/LVGL/src/misc/lv_txt.c
	packages/LVGL/src/font/lv_font_montserrat_44.c
	packages/LVGL/src/extra/widgets/tabview/lv_tabview.c
	packages/LVGL/src/font/lv_font_montserrat_48.c
	packages/LVGL/src/extra/libs/qrcode/qrcodegen.c
	packages/LVGL/src/draw/lv_draw_line.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_label.c
	packages/LVGL/src/misc/lv_templ.c
	packages/LVGL/src/core/lv_indev.c
	packages/LVGL/src/widgets/lv_btn.c
	packages/LVGL/src/extra/libs/ffmpeg/lv_ffmpeg.c
	packages/LVGL/src/core/lv_obj_scroll.c
	packages/LVGL/src/font/lv_font_loader.c
	packages/LVGL/src/font/lv_font_montserrat_42.c
	packages/LVGL/src/extra/widgets/tileview/lv_tileview.c
	packages/LVGL/src/misc/lv_anim_timeline.c
	packages/LVGL/src/draw/lv_draw_triangle.c
	packages/LVGL/src/misc/lv_printf.c
	packages/LVGL/src/core/lv_theme.c
	packages/LVGL/src/widgets/lv_textarea.c
	packages/LVGL/src/extra/layouts/flex/lv_flex.c
	packages/LVGL/src/extra/widgets/led/lv_led.c
	packages/LVGL/src/font/lv_font_dejavu_16_persian_hebrew.c
	packages/LVGL/src/font/lv_font_montserrat_46.c
	packages/LVGL/src/misc/lv_style.c
	packages/LVGL/src/draw/lv_img_decoder.c
	packages/LVGL/src/misc/lv_tlsf.c
	packages/LVGL/src/core/lv_disp.c
	packages/LVGL/src/widgets/lv_btnmatrix.c
	packages/LVGL/src/hal/lv_hal_tick.c
	packages/LVGL/src/extra/libs/rlottie/lv_rlottie.c
	packages/LVGL/src/font/lv_font_montserrat_36.c
	packages/LVGL/src/extra/widgets/msgbox/lv_msgbox.c
	packages/LVGL/src/font/lv_font.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_texture_cache.c
	packages/LVGL/src/extra/widgets/keyboard/lv_keyboard.c
	packages/LVGL/src/misc/lv_style_gen.c
	packages/LVGL/src/draw/lv_draw_arc.c
	packages/LVGL/src/extra/libs/sjpg/tjpgd.c
	packages/LVGL/src/misc/lv_math.c
	packages/LVGL/src/core/lv_obj_class.c
	packages/LVGL/src/widgets/lv_img.c
	packages/LVGL/src/extra/layouts/grid/lv_grid.c
	packages/LVGL/src/hal/lv_hal_indev.c
	packages/LVGL/src/extra/widgets/win/lv_win.c
	packages/LVGL/src/font/lv_font_unscii_16.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_arc.c
	packages/LVGL/src/misc/lv_mem.c
	packages/LVGL/src/draw/lv_draw_rect.c
	packages/LVGL/src/extra/libs/sjpg/lv_sjpg.c
	packages/LVGL/src/misc/lv_anim.c
	packages/LVGL/src/core/lv_refr.c
	packages/LVGL/src/widgets/lv_slider.c
	packages/LVGL/src/hal/lv_hal_disp.c
	packages/LVGL/src/font/lv_font_montserrat_38.c
	packages/LVGL/src/extra/widgets/span/lv_span.c
	packages/LVGL/src/font/lv_font_montserrat_34.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_rect.c
	packages/LVGL/src/misc/lv_fs.c
	packages/LVGL/src/draw/lv_draw_img.c
	packages/LVGL/src/misc/lv_gc.c
	packages/LVGL/src/core/lv_event.c
	packages/LVGL/src/widgets/lv_dropdown.c
	packages/LVGL/src/extra/libs/fsdrv/lv_fs_stdio.c
	packages/LVGL/src/extra/themes/basic/lv_theme_basic.c
	packages/LVGL/src/extra/widgets/chart/lv_chart.c
	packages/LVGL/src/font/lv_font_montserrat_32.c
	packages/LVGL/src/font/lv_font_montserrat_8.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_img.c
	packages/LVGL/src/misc/lv_txt_ap.c
	packages/LVGL/src/draw/lv_draw_blend.c
	packages/LVGL/src/misc/lv_bidi.c
	packages/LVGL/src/core/lv_obj_draw.c
	packages/LVGL/src/widgets/lv_bar.c
	packages/LVGL/src/extra/libs/fsdrv/lv_fs_posix.c
	packages/LVGL/src/extra/lv_extra.c
	packages/LVGL/src/extra/libs/freetype/lv_freetype.c
	packages/LVGL/src/font/lv_font_montserrat_28.c
	packages/LVGL/src/extra/widgets/colorwheel/lv_colorwheel.c
	packages/LVGL/src/font/lv_font_montserrat_30.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_draw_line.c
	packages/LVGL/src/misc/lv_color.c
	packages/LVGL/src/draw/lv_img_cache.c
	packages/LVGL/src/core/lv_obj.c
	packages/LVGL/src/widgets/lv_table.c
	packages/LVGL/src/extra/libs/fsdrv/lv_fs_fatfs.c
	packages/LVGL/src/extra/themes/default/lv_theme_default.c
	packages/LVGL/src/extra/widgets/spinbox/lv_spinbox.c
	packages/LVGL/src/font/lv_font_montserrat_22.c
	packages/LVGL/src/font/lv_font_montserrat_20.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_lru.c
	packages/LVGL/src/draw/lv_draw_mask.c
	packages/LVGL/src/gpu/lv_gpu_nxp_pxp_osa.c
	packages/LVGL/src/core/lv_obj_style_gen.c
	packages/LVGL/src/widgets/lv_arc.c
	packages/LVGL/src/extra/libs/fsdrv/lv_fs_win32.c
	packages/LVGL/src/font/lv_font_montserrat_28_compressed.c
	packages/LVGL/src/font/lv_font_montserrat_26.c
	packages/LVGL/src/extra/widgets/list/lv_list.c
	packages/LVGL/src/font/lv_font_simsun_16_cjk.c
	packages/LVGL/src/gpu/sdl/lv_gpu_sdl_mask.c
	packages/LVGL/src/misc/lv_ll.c
	packages/LVGL/src/draw/lv_draw_label.c
	packages/LVGL/src/gpu/lv_gpu_sdl.c
	packages/LVGL/src/extra/libs/png/lv_png.c
	packages/LVGL/src/core/lv_obj_style.c
	packages/LVGL/src/widgets/lv_line.c
	packages/LVGL/src/extra/themes/mono/lv_theme_mono.c
	packages/LVGL/src/font/lv_font_montserrat_10.c
	libraries/lvgl/demo/src/lv_demo_widgets/assets/img_clothes.c
	libraries/lvgl/demo/src/lv_demo_widgets/assets/img_demo_widgets_avatar.c
	libraries/lvgl/demo/src/lv_demo_widgets/assets/img_lvgl_logo.c
	libraries/lvgl/demo/src/lv_demo_widgets/lv_demo_widgets.c
	libraries/lvgl/lv_port_indev.c
	libraries/lvgl/lv_demo.c
	libraries/lvgl/lv_port_disp.c
	packages/LVGL/rt-thread/lv_rt_thread_port.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_ltdc.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sd.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_qspi.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sdram.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc.c
	libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/system_stm32h7xx.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cortex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma2d.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_sdmmc.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_sram.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cec.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_gpio.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_spi.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_dma_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_cryp_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_usart.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rng.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_i2c.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rcc_ex.c
	libraries/STM32H7xx_HAL/CMSIS/Device/ST/STM32H7xx/Source/Templates/gcc/startup_stm32h750xx.s
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_comp.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_crc_ex.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pwr.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_fmc.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_mdma.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_rtc.c
	libraries/STM32H7xx_HAL/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_uart_ex.c
)

LINK_DIRECTORIES(
)

LINK_LIBRARIES(
	m
	c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD 
COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf)